manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-kubernetes-service
  namespace: crawler-bot
spec:
  type: LoadBalancer
  selector:
    app: azure-kubernetes-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
