manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crawler-bot-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.bugsearch.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crawler-bot
                port:
                  number: 80
